--- a/Python_100code.ipynb
+++ b/Python_100code.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "153\n370\n371\n407\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "寻找水仙花数，水仙花数是指一个 3 位数，它的每个位上的数字的 3次幂之和等于它本身（例如：1^3 + 5^3+ 3^3 = 153）。\n",
@@ -94,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,22 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
      "output_type": "stream",
-     "text": [
-      "请输入一个正整数： -4\n",
-      "输入错误，请输入正整数： 5\n"
-     ]
-    },
-    {
      "name": "stdout",
-     "output_type": "stream",
      "text": [
-      "5是一个素数\n"
+      "12不是一个素数\n"
      ]
     }
    ],
@@ -145,15 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid character in identifier (<ipython-input-6-183890f2d93c>, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-183890f2d93c>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    for i in range(2，x+1):\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "12和54的最大公约数为2\n12和54的最大公约数为3\n12和54的最大公约数为6\n"
      ]
     }
    ],
@@ -166,7 +165,7 @@
     "\n",
     "if x>y:\n",
     "    x,y=y,x\n",
-    "for i in range(2，x+1):\n",
+    "for i in range(2,x+1):\n",
     "    if x%i==0 and y%i==0:\n",
     "        print('{0}和{1}的最大公约数为{2}'.format(x,y,i))\n",
     "        \n"
@@ -197,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.0-final"
   },
   "mimetype": "text/x-python",
   "name": "python",
