--- a/Python_100code.ipynb
+++ b/Python_100code.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "153\n370\n371\n407\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "寻找水仙花数，水仙花数是指一个 3 位数，它的每个位上的数字的 3次幂之和等于它本身（例如：1^3 + 5^3+ 3^3 = 153）。\n",
@@ -30,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,17 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 1 2 3 5 8 13 21 34 55"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "生成斐波那契数列\n",
@@ -79,17 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def factorial(n):\n",
     "    result=1\n",
@@ -102,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,17 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "12不是一个素数\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "输入一个数看是否是素数，素数是指在大于1的自然数中，只能被1和他自己整除\n",
@@ -145,17 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "12和54的最大公约数为2\n12和54的最大公约数为3\n12和54的最大公约数为6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "输入两个正整数，计算最大公约数和最小公倍数\n",
@@ -169,6 +129,50 @@
     "    if x%i==0 and y%i==0:\n",
     "        print('{0}和{1}的最大公约数为{2}'.format(x,y,i))\n",
     "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lis=[1,2,3]\n",
+    "lis[-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "import random\n",
+    "chars=string.ascii_letters+string.digits\n",
+    "print(chars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def yang(n):\n",
+    "    if n==1:\n",
+    "        return [[1]]\n",
+    "    elif n==2:\n",
+    "        return [[1],[1,1]]\n",
+    "    else:\n",
+    "        new=[1]\n",
+    "        for i in range(1,n-1):\n",
+    "            new.append(yang(n-1)[n-2][i]+yang(n-1)[n-2][i-1]) #n-2的原因是索引是从0开始的，而n代表从1开始的行数\n",
+    "        new.append(1)\n",
+    "        lis=yang(n-1)\n",
+    "        lis.append(new)\n",
+    "        return lis\n",
+    "yang(10)\n"
    ]
   },
   {
